welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:8: error: value update is not a member of Boolean
while (estSurBiscuit() = true ){
       ^