welcome.lessons.welcome.loopwhile.WhileMoria.scala.code

	


droite();
droite();
while (estSurBiscuit() = true ){
	


while (estSurBiscuit()!= true ){
	
	
     avance();
}
prendBiscuit()
gauche()
gauche()
while (estSurBiscuit()!= true ){
	avance();
}
recule();
poseBiscuit();
}